--- a/site/index.html
+++ b/site/index.html
@@ -21,7 +21,7 @@
 	</style>
 </head>
 <body>
-	<script src="https://cdn.jsdelivr.net/npm/phaser@3.2.1/dist/phaser.min.js"></script>
+	<script src="./phaser.min.js"></script>
 	<script>
 		var config = {
 			type: Phaser.AUTO,
@@ -30,7 +30,7 @@
 			physics: {
 				default: 'arcade',
 				arcade: {
-					gravity: { y: 1000 }
+					gravity: { y: 200 }
 				}
 			},
 			scene: {
@@ -42,8 +42,6 @@
 		var game = new Phaser.Game(config);
 		
 		function preload() {
-			// this.load.setBaseURL('https://labs.phaser.io');
-			
 			this.load.image('sky', './images/space3.png');
 			this.load.image('logo', './images/phaser3-logo.png');
 			this.load.image('red', './images/red.png');
@@ -67,19 +65,6 @@
 			logo.setCollideWorldBounds(true);
 			
 			emitter.startFollow(logo);
-			this.input.keyboard.on('keydown_A', function (event) {
-				console.log('a');
-				logo.angularVelocity = -100;
-			});
-			this.input.keyboard.on('keydown_D', function (event) {
-				logo.angularVelocity = 100;
-			});
-			this.input.keyboard.on('keydown_W', function (event) {
-				logo.setVelocity(0, -100);
-			});
-			this.input.keyboard.on('keydown_S', function (event) {
-				logo.setVelocity(0, 100);
-			});
 		}
 	</script>
 </body>
